--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,51 +1,51 @@
 html {
-  font-size: 10px;
-  background: url('./background.jpg') bottom center;
-  background-size: cover;
+    
 }
 
-body,html {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-.keys {
-  display: flex;
-  flex: 1;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
+.container {
+    height: 100vh;
+    width: 100vw;
+    display: inline-block;
+    margin: auto;
+    text-align: center;
 }
 
 .key {
-  border: .4rem solid black;
-  border-radius: .5rem;
-  margin: 1rem;
-  font-size: 1.5rem;
-  padding: 1rem .5rem;
-  transition: all .07s ease;
-  width: 10rem;
-  text-align: center;
-  color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
+    box-sizing: border-box;
+    margin: auto;
+    display: inline-block;
+    border: 4px solid black;
+    width: 96px;
+    height: 136px;
+    margin: .875rem;
+    margin-top: 20%;
+    margin-bottom: 20%;
+    border-radius: 0.5rem;
+    background-color: white; 
 }
 
-.playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+.key:hover {
+    border: 4px solid darkorange;
+    filter: drop-shadow(0px 0px 16px darkorange);
 }
 
-kbd {
-  display: block;
-  font-size: 4rem;
+.key-symbol {
+    box-sizing: border-box;
+    font-size: 3rem;
+    text-transform: uppercase;
+    font-family: serif;
+    margin-bottom: 0px;
+    margin-top: 1.5rem;
 }
 
-.sound {
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: .1rem;
-  color: #ffc600;
+.key-symbol:hover {
+    font-size: 3.25rem;
+}
+
+.key-name {
+    font-size: .875rem;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    margin-top: 0.25rem;
+    color: darkorange;
 }
