--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -18,13 +18,13 @@ html {
     width: 96px;
     height: 136px;
     margin: .875rem;
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 25%;
+    margin-bottom: 25%;
     border-radius: 0.5rem;
-    background-color: white; 
+    background-color: white;
 }
 
-.key:hover {
+.key-clicked {
     border: 4px solid darkorange;
     filter: drop-shadow(0px 0px 16px darkorange);
 }
@@ -36,10 +36,6 @@ html {
     font-family: serif;
     margin-bottom: 0px;
     margin-top: 1.5rem;
-}
-
-.key-symbol:hover {
-    font-size: 3.25rem;
 }
 
 .key-name {
