--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,7 +1,3 @@
-html {
-    
-}
-
 .container {
     height: 100vh;
     width: 100vw;
@@ -22,11 +18,7 @@ html {
     margin-bottom: 25%;
     border-radius: 0.5rem;
     background-color: white;
-}
-
-.key-clicked {
-    border: 4px solid darkorange;
-    filter: drop-shadow(0px 0px 16px darkorange);
+    cursor: pointer;
 }
 
 .key-symbol {
@@ -45,3 +37,37 @@ html {
     margin-top: 0.25rem;
     color: darkorange;
 }
+
+/* onclick animation */
+
+.key-clicked {
+    animation-name: drum;
+    animation-duration: 1s;
+}
+
+.key-clicked-again {
+    animation-name: drum-again;
+    animation-duration: 1s;
+}
+
+@keyframes drum {
+    from {
+        border: 4px solid darkorange;
+        filter: drop-shadow(0px 0px 36px darkorange);
+    }
+    to {
+        border: 4px solid black;
+        filter: drop-shadow(0px 0px 36px rgba(255,255,255,0));
+    }
+  }
+
+  @keyframes drum-again {
+    from {
+        border: 4px solid darkorange;
+        filter: drop-shadow(0px 0px 36px darkorange);
+    }
+    to {
+        border: 4px solid black;
+        filter: drop-shadow(0px 0px 36px rgba(255,255,255,0));
+    }
+  }
