--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -53,21 +53,25 @@
 @keyframes drum {
     from {
         border: 4px solid darkorange;
-        filter: drop-shadow(0px 0px 36px darkorange);
+        filter: drop-shadow(0px 0px 16px darkorange);
+        color: darkorange;
     }
     to {
         border: 4px solid black;
-        filter: drop-shadow(0px 0px 36px rgba(255,255,255,0));
+        filter: drop-shadow(0px 0px 16px rgba(255,255,255,0));
+        color: none;
     }
   }
 
   @keyframes drum-again {
     from {
         border: 4px solid darkorange;
-        filter: drop-shadow(0px 0px 36px darkorange);
+        filter: drop-shadow(0px 0px 16px darkorange);
+        color: darkorange;
     }
     to {
         border: 4px solid black;
-        filter: drop-shadow(0px 0px 36px rgba(255,255,255,0));
+        filter: drop-shadow(0px 0px 16px rgba(255,255,255,0));
+        color: none;
     }
   }
